--- a/data/homepage/c-language/c_004.md
+++ b/data/homepage/c-language/c_004.md
@@ -1,15 +1,5 @@
 # C语言指针与内存管理
 
-## 学习目标
-
-通过本章的深入学习，你将全面掌握：
-- 指针的本质概念和计算机内存模型的深层理解
-- 指针类型系统、指针运算和指针与数组的内在关系
-- 动态内存管理的原理、最佳实践和常见陷阱
-- 多级指针、函数指针和复杂数据结构的构建
-- 指针安全编程技巧和内存调试方法
-- 实际项目中指针应用的高级技巧和性能优化
-
 ## 1. 指针的本质与内存模型深度解析
 
 ### 1.1 计算机内存模型基础
@@ -1304,4 +1294,1152 @@ void callback_demo() {
 // 排序算法与比较函数
 typedef int (*CompareFunc)(const void* a, const void* b);
 
-int compare_int_asc
+int compare_int_asc(const void* a, const void* b) {
+    int ia = *(const int*)a;
+    int ib = *(const int*)b;
+    return (ia > ib) - (ia < ib);  // 升序
+}
+
+int compare_int_desc(const void* a, const void* b) {
+    int ia = *(const int*)a;
+    int ib = *(const int*)b;
+    return (ib > ia) - (ib < ia);  // 降序
+}
+
+int compare_string(const void* a, const void* b) {
+    const char* sa = *(const char**)a;
+    const char* sb = *(const char**)b;
+    return strcmp(sa, sb);
+}
+
+void generic_sort_demo() {
+    printf("\n=== 通用排序演示 ===\n");
+    
+    // 整数排序
+    int numbers[] = {64, 34, 25, 12, 22, 11, 90};
+    int num_count = sizeof(numbers) / sizeof(numbers[0]);
+    
+    printf("原始整数数组: ");
+    for (int i = 0; i < num_count; i++) {
+        printf("%d ", numbers[i]);
+    }
+    printf("\n");
+    
+    // 升序排序
+    qsort(numbers, num_count, sizeof(int), compare_int_asc);
+    printf("升序排序后: ");
+    for (int i = 0; i < num_count; i++) {
+        printf("%d ", numbers[i]);
+    }
+    printf("\n");
+    
+    // 降序排序
+    qsort(numbers, num_count, sizeof(int), compare_int_desc);
+    printf("降序排序后: ");
+    for (int i = 0; i < num_count; i++) {
+        printf("%d ", numbers[i]);
+    }
+    printf("\n");
+    
+    // 字符串排序
+    const char* strings[] = {"banana", "apple", "cherry", "date", "elderberry"};
+    int str_count = sizeof(strings) / sizeof(strings[0]);
+    
+    printf("\n原始字符串数组: ");
+    for (int i = 0; i < str_count; i++) {
+        printf("\"%s\" ", strings[i]);
+    }
+    printf("\n");
+    
+    qsort(strings, str_count, sizeof(char*), compare_string);
+    printf("字典序排序后: ");
+    for (int i = 0; i < str_count; i++) {
+        printf("\"%s\" ", strings[i]);
+    }
+    printf("\n");
+}
+
+// 事件处理系统
+typedef enum {
+    EVENT_CLICK,
+    EVENT_KEYPRESS,
+    EVENT_MOUSE_MOVE,
+    EVENT_TIMER
+} EventType;
+
+typedef struct {
+    EventType type;
+    int x, y;           // 鼠标坐标
+    int key_code;       // 按键代码
+    double timestamp;   // 时间戳
+} Event;
+
+typedef void (*EventHandler)(const Event* event);
+
+void on_click(const Event* event) {
+    printf("  点击事件: 坐标(%d, %d), 时间: %.2f\n", 
+           event->x, event->y, event->timestamp);
+}
+
+void on_keypress(const Event* event) {
+    printf("  按键事件: 键码%d, 时间: %.2f\n", 
+           event->key_code, event->timestamp);
+}
+
+void on_mouse_move(const Event* event) {
+    printf("  鼠标移动: 坐标(%d, %d), 时间: %.2f\n", 
+           event->x, event->y, event->timestamp);
+}
+
+void on_timer(const Event* event) {
+    printf("  定时器事件: 时间: %.2f\n", event->timestamp);
+}
+
+typedef struct {
+    EventType type;
+    EventHandler handler;
+} EventHandlerEntry;
+
+EventHandlerEntry event_handlers[] = {
+    {EVENT_CLICK, on_click},
+    {EVENT_KEYPRESS, on_keypress},
+    {EVENT_MOUSE_MOVE, on_mouse_move},
+    {EVENT_TIMER, on_timer}
+};
+
+void dispatch_event(const Event* event) {
+    int handler_count = sizeof(event_handlers) / sizeof(event_handlers[0]);
+    
+    for (int i = 0; i < handler_count; i++) {
+        if (event_handlers[i].type == event->type) {
+            event_handlers[i].handler(event);
+            return;
+        }
+    }
+    
+    printf("  未知事件类型: %d\n", event->type);
+}
+
+void event_system_demo() {
+    printf("\n=== 事件处理系统演示 ===\n");
+    
+    Event events[] = {
+        {EVENT_CLICK, 100, 200, 0, 1.0},
+        {EVENT_KEYPRESS, 0, 0, 65, 1.5},  // 'A'键
+        {EVENT_MOUSE_MOVE, 150, 250, 0, 2.0},
+        {EVENT_TIMER, 0, 0, 0, 2.5},
+        {EVENT_CLICK, 300, 400, 0, 3.0}
+    };
+    
+    int event_count = sizeof(events) / sizeof(events[0]);
+    
+    printf("处理事件序列:\n");
+    for (int i = 0; i < event_count; i++) {
+        dispatch_event(&events[i]);
+    }
+}
+
+int main() {
+    basic_function_pointers();
+    callback_demo();
+    generic_sort_demo();
+    event_system_demo();
+    return 0;
+}
+```
+
+### 3.3 复杂数据结构实现
+
+使用指针构建复杂的数据结构是C语言的重要应用。
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <assert.h>
+
+// 链表实现
+typedef struct ListNode {
+    int data;
+    struct ListNode* next;
+} ListNode;
+
+typedef struct {
+    ListNode* head;
+    ListNode* tail;
+    size_t size;
+} LinkedList;
+
+LinkedList* list_create() {
+    LinkedList* list = malloc(sizeof(LinkedList));
+    if (list) {
+        list->head = NULL;
+        list->tail = NULL;
+        list->size = 0;
+    }
+    return list;
+}
+
+void list_destroy(LinkedList* list) {
+    if (!list) return;
+    
+    ListNode* current = list->head;
+    while (current) {
+        ListNode* next = current->next;
+        free(current);
+        current = next;
+    }
+    free(list);
+}
+
+void list_push_back(LinkedList* list, int data) {
+    if (!list) return;
+    
+    ListNode* new_node = malloc(sizeof(ListNode));
+    if (!new_node) return;
+    
+    new_node->data = data;
+    new_node->next = NULL;
+    
+    if (list->tail) {
+        list->tail->next = new_node;
+        list->tail = new_node;
+    } else {
+        list->head = list->tail = new_node;
+    }
+    
+    list->size++;
+}
+
+void list_push_front(LinkedList* list, int data) {
+    if (!list) return;
+    
+    ListNode* new_node = malloc(sizeof(ListNode));
+    if (!new_node) return;
+    
+    new_node->data = data;
+    new_node->next = list->head;
+    
+    if (list->head) {
+        list->head = new_node;
+    } else {
+        list->head = list->tail = new_node;
+    }
+    
+    list->size++;
+}
+
+int list_pop_front(LinkedList* list) {
+    if (!list || !list->head) return -1;
+    
+    ListNode* old_head = list->head;
+    int data = old_head->data;
+    
+    list->head = old_head->next;
+    if (!list->head) {
+        list->tail = NULL;
+    }
+    
+    free(old_head);
+    list->size--;
+    
+    return data;
+}
+
+void list_print(const LinkedList* list) {
+    if (!list) return;
+    
+    printf("链表 (大小: %zu): ", list->size);
+    ListNode* current = list->head;
+    while (current) {
+        printf("%d", current->data);
+        if (current->next) printf(" -> ");
+        current = current->next;
+    }
+    printf(" -> NULL\n");
+}
+
+void linked_list_demo() {
+    printf("\n=== 链表演示 ===\n");
+    
+    LinkedList* list = list_create();
+    
+    printf("创建空链表:\n");
+    list_print(list);
+    
+    printf("\n尾部插入元素 1, 2, 3:\n");
+    list_push_back(list, 1);
+    list_push_back(list, 2);
+    list_push_back(list, 3);
+    list_print(list);
+    
+    printf("\n头部插入元素 0, -1:\n");
+    list_push_front(list, 0);
+    list_push_front(list, -1);
+    list_print(list);
+    
+    printf("\n从头部删除元素:\n");
+    while (list->size > 0) {
+        int data = list_pop_front(list);
+        printf("删除: %d, ", data);
+        list_print(list);
+    }
+    
+    list_destroy(list);
+}
+
+// 二叉搜索树实现
+typedef struct TreeNode {
+    int data;
+    struct TreeNode* left;
+    struct TreeNode* right;
+} TreeNode;
+
+typedef struct {
+    TreeNode* root;
+    size_t size;
+} BinarySearchTree;
+
+BinarySearchTree* bst_create() {
+    BinarySearchTree* bst = malloc(sizeof(BinarySearchTree));
+    if (bst) {
+        bst->root = NULL;
+        bst->size = 0;
+    }
+    return bst;
+}
+
+TreeNode* bst_insert_node(TreeNode* root, int data) {
+    if (!root) {
+        TreeNode* new_node = malloc(sizeof(TreeNode));
+        if (new_node) {
+            new_node->data = data;
+            new_node->left = new_node->right = NULL;
+        }
+        return new_node;
+    }
+    
+    if (data < root->data) {
+        root->left = bst_insert_node(root->left, data);
+    } else if (data > root->data) {
+        root->right = bst_insert_node(root->right, data);
+    }
+    
+    return root;
+}
+
+void bst_insert(BinarySearchTree* bst, int data) {
+    if (!bst) return;
+    
+    bst->root = bst_insert_node(bst->root, data);
+    bst->size++;
+}
+
+TreeNode* bst_find_min(TreeNode* root) {
+    while (root && root->left) {
+        root = root->left;
+    }
+    return root;
+}
+
+TreeNode* bst_delete_node(TreeNode* root, int data) {
+    if (!root) return NULL;
+    
+    if (data < root->data) {
+        root->left = bst_delete_node(root->left, data);
+    } else if (data > root->data) {
+        root->right = bst_delete_node(root->right, data);
+    } else {
+        // 找到要删除的节点
+        if (!root->left) {
+            TreeNode* temp = root->right;
+            free(root);
+            return temp;
+        } else if (!root->right) {
+            TreeNode* temp = root->left;
+            free(root);
+            return temp;
+        }
+        
+        // 有两个子节点的情况
+        TreeNode* temp = bst_find_min(root->right);
+        root->data = temp->data;
+        root->right = bst_delete_node(root->right, temp->data);
+    }
+    
+    return root;
+}
+
+void bst_delete(BinarySearchTree* bst, int data) {
+    if (!bst) return;
+    
+    bst->root = bst_delete_node(bst->root, data);
+    bst->size--;
+}
+
+bool bst_search(const TreeNode* root, int data) {
+    if (!root) return false;
+    
+    if (data == root->data) return true;
+    if (data < root->data) return bst_search(root->left, data);
+    return bst_search(root->right, data);
+}
+
+void bst_inorder(const TreeNode* root) {
+    if (root) {
+        bst_inorder(root->left);
+        printf("%d ", root->data);
+        bst_inorder(root->right);
+    }
+}
+
+void bst_destroy_nodes(TreeNode* root) {
+    if (root) {
+        bst_destroy_nodes(root->left);
+        bst_destroy_nodes(root->right);
+        free(root);
+    }
+}
+
+void bst_destroy(BinarySearchTree* bst) {
+    if (bst) {
+        bst_destroy_nodes(bst->root);
+        free(bst);
+    }
+}
+
+void binary_search_tree_demo() {
+    printf("\n=== 二叉搜索树演示 ===\n");
+    
+    BinarySearchTree* bst = bst_create();
+    
+    int values[] = {50, 30, 70, 20, 40, 60, 80, 10, 25, 35, 45};
+    int count = sizeof(values) / sizeof(values[0]);
+    
+    printf("插入元素: ");
+    for (int i = 0; i < count; i++) {
+        printf("%d ", values[i]);
+        bst_insert(bst, values[i]);
+    }
+    printf("\n");
+    
+    printf("中序遍历 (应该是有序的): ");
+    bst_inorder(bst->root);
+    printf("\n");
+    
+    printf("树的大小: %zu\n", bst->size);
+    
+    // 搜索测试
+    int search_values[] = {25, 55, 80, 100};
+    int search_count = sizeof(search_values) / sizeof(search_values[0]);
+    
+    printf("\n搜索测试:\n");
+    for (int i = 0; i < search_count; i++) {
+        bool found = bst_search(bst->root, search_values[i]);
+        printf("  搜索 %d: %s\n", search_values[i], found ? "找到" : "未找到");
+    }
+    
+    // 删除测试
+    printf("\n删除元素 30:\n");
+    bst_delete(bst, 30);
+    printf("删除后中序遍历: ");
+    bst_inorder(bst->root);
+    printf("\n");
+    
+    bst_destroy(bst);
+}
+
+// 哈希表实现
+#define HASH_TABLE_SIZE 101
+
+typedef struct HashEntry {
+    char* key;
+    int value;
+    struct HashEntry* next;
+} HashEntry;
+
+typedef struct {
+    HashEntry* buckets[HASH_TABLE_SIZE];
+    size_t size;
+} HashTable;
+
+unsigned int hash_function(const char* key) {
+    unsigned int hash = 5381;
+    while (*key) {
+        hash = ((hash << 5) + hash) + *key++;
+    }
+    return hash % HASH_TABLE_SIZE;
+}
+
+HashTable* hash_table_create() {
+    HashTable* table = malloc(sizeof(HashTable));
+    if (table) {
+        for (int i = 0; i < HASH_TABLE_SIZE; i++) {
+            table->buckets[i] = NULL;
+        }
+        table->size = 0;
+    }
+    return table;
+}
+
+void hash_table_insert(HashTable* table, const char* key, int value) {
+    if (!table || !key) return;
+    
+    unsigned int index = hash_function(key);
+    HashEntry* entry = table->buckets[index];
+    
+    // 检查是否已存在
+    while (entry) {
+        if (strcmp(entry->key, key) == 0) {
+            entry->value = value;  // 更新值
+            return;
+        }
+        entry = entry->next;
+    }
+    
+    // 创建新条目
+    HashEntry* new_entry = malloc(sizeof(HashEntry));
+    if (!new_entry) return;
+    
+    new_entry->key = malloc(strlen(key) + 1);
+    if (!new_entry->key) {
+        free(new_entry);
+        return;
+    }
+    
+    strcpy(new_entry->key, key);
+    new_entry->value = value;
+    new_entry->next = table->buckets[index];
+    table->buckets[index] = new_entry;
+    table->size++;
+}
+
+bool hash_table_get(const HashTable* table, const char* key, int* value) {
+    if (!table || !key) return false;
+    
+    unsigned int index = hash_function(key);
+    HashEntry* entry = table->buckets[index];
+    
+    while (entry) {
+        if (strcmp(entry->key, key) == 0) {
+            if (value) *value = entry->value;
+            return true;
+        }
+        entry = entry->next;
+    }
+    
+    return false;
+}
+
+void hash_table_remove(HashTable* table, const char* key) {
+    if (!table || !key) return;
+    
+    unsigned int index = hash_function(key);
+    HashEntry** entry = &table->buckets[index];
+    
+    while (*entry) {
+        if (strcmp((*entry)->key, key) == 0) {
+            HashEntry* to_delete = *entry;
+            *entry = (*entry)->next;
+            free(to_delete->key);
+            free(to_delete);
+            table->size--;
+            return;
+        }
+        entry = &(*entry)->next;
+    }
+}
+
+void hash_table_print(const HashTable* table) {
+    if (!table) return;
+    
+    printf("哈希表 (大小: %zu):\n", table->size);
+    for (int i = 0; i < HASH_TABLE_SIZE; i++) {
+        HashEntry* entry = table->buckets[i];
+        if (entry) {
+            printf("  桶 %d: ", i);
+            while (entry) {
+                printf("(\"%s\": %d)", entry->key, entry->value);
+                if (entry->next) printf(" -> ");
+                entry = entry->next;
+            }
+            printf("\n");
+        }
+    }
+}
+
+void hash_table_destroy(HashTable* table) {
+    if (!table) return;
+    
+    for (int i = 0; i < HASH_TABLE_SIZE; i++) {
+        HashEntry* entry = table->buckets[i];
+        while (entry) {
+            HashEntry* next = entry->next;
+            free(entry->key);
+            free(entry);
+            entry = next;
+        }
+    }
+    free(table);
+}
+
+void hash_table_demo() {
+    printf("\n=== 哈希表演示 ===\n");
+    
+    HashTable* table = hash_table_create();
+    
+    // 插入数据
+    hash_table_insert(table, "apple", 5);
+    hash_table_insert(table, "banana", 3);
+    hash_table_insert(table, "cherry", 8);
+    hash_table_insert(table, "date", 2);
+    hash_table_insert(table, "elderberry", 12);
+    
+    printf("插入数据后:\n");
+    hash_table_print(table);
+    
+    // 查找测试
+    const char* search_keys[] = {"apple", "banana", "grape", "cherry"};
+    int search_count = sizeof(search_keys) / sizeof(search_keys[0]);
+    
+    printf("\n查找测试:\n");
+    for (int i = 0; i < search_count; i++) {
+        int value;
+        bool found = hash_table_get(table, search_keys[i], &value);
+        if (found) {
+            printf("  \"%s\": %d\n", search_keys[i], value);
+        } else {
+            printf("  \"%s\": 未找到\n", search_keys[i]);
+        }
+    }
+    
+    // 删除测试
+    printf("\n删除 \"banana\":\n");
+    hash_table_remove(table, "banana");
+    hash_table_print(table);
+    
+    hash_table_destroy(table);
+}
+
+int main() {
+    linked_list_demo();
+    binary_search_tree_demo();
+    hash_table_demo();
+    return 0;
+}
+```
+
+## 4. 内存调试与性能优化
+
+### 4.1 内存调试工具与技术
+
+内存调试是C语言开发中的重要技能，掌握各种调试工具和技术能够帮助快速定位和解决内存相关问题。
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <time.h>
+#include <assert.h>
+
+// 内存使用统计
+typedef struct {
+    size_t total_allocated;
+    size_t current_allocated;
+    size_t peak_allocated;
+    size_t allocation_count;
+    size_t deallocation_count;
+} MemoryStats;
+
+static MemoryStats g_memory_stats = {0};
+
+// 内存分配跟踪
+void* tracked_malloc(size_t size) {
+    void* ptr = malloc(size);
+    if (ptr) {
+        g_memory_stats.total_allocated += size;
+        g_memory_stats.current_allocated += size;
+        g_memory_stats.allocation_count++;
+        
+        if (g_memory_stats.current_allocated > g_memory_stats.peak_allocated) {
+            g_memory_stats.peak_allocated = g_memory_stats.current_allocated;
+        }
+        
+        printf("[TRACK] 分配 %zu 字节, 地址: %p\n", size, ptr);
+    }
+    return ptr;
+}
+
+void tracked_free(void* ptr, size_t size) {
+    if (ptr) {
+        free(ptr);
+        g_memory_stats.current_allocated -= size;
+        g_memory_stats.deallocation_count++;
+        printf("[TRACK] 释放 %zu 字节, 地址: %p\n", size, ptr);
+    }
+}
+
+void print_memory_stats() {
+    printf("\n=== 内存使用统计 ===\n");
+    printf("  总分配量: %zu 字节\n", g_memory_stats.total_allocated);
+    printf("  当前使用: %zu 字节\n", g_memory_stats.current_allocated);
+    printf("  峰值使用: %zu 字节\n", g_memory_stats.peak_allocated);
+    printf("  分配次数: %zu\n", g_memory_stats.allocation_count);
+    printf("  释放次数: %zu\n", g_memory_stats.deallocation_count);
+    printf("  内存泄漏: %s\n", 
+           (g_memory_stats.current_allocated == 0) ? "无" : "检测到泄漏");
+}
+
+// 内存边界检查
+#define GUARD_SIZE 8
+#define GUARD_PATTERN 0xDEADBEEF
+
+typedef struct {
+    size_t size;
+    unsigned int front_guard;
+    // 用户数据在这里
+    // unsigned int back_guard; // 在用户数据后面
+} GuardedBlock;
+
+void* guarded_malloc(size_t size) {
+    size_t total_size = sizeof(GuardedBlock) + size + sizeof(unsigned int);
+    GuardedBlock* block = malloc(total_size);
+    
+    if (!block) return NULL;
+    
+    block->size = size;
+    block->front_guard = GUARD_PATTERN;
+    
+    // 设置后卫
+    unsigned int* back_guard = (unsigned int*)((char*)block + sizeof(GuardedBlock) + size);
+    *back_guard = GUARD_PATTERN;
+    
+    // 返回用户数据区域
+    return (char*)block + sizeof(GuardedBlock);
+}
+
+bool check_guards(void* ptr) {
+    if (!ptr) return false;
+    
+    GuardedBlock* block = (GuardedBlock*)((char*)ptr - sizeof(GuardedBlock));
+    unsigned int* back_guard = (unsigned int*)((char*)ptr + block->size);
+    
+    bool front_ok = (block->front_guard == GUARD_PATTERN);
+    bool back_ok = (*back_guard == GUARD_PATTERN);
+    
+    if (!front_ok) {
+        printf("[ERROR] 前卫损坏: 期望 0x%X, 实际 0x%X\n", 
+               GUARD_PATTERN, block->front_guard);
+    }
+    
+    if (!back_ok) {
+        printf("[ERROR] 后卫损坏: 期望 0x%X, 实际 0x%X\n", 
+               GUARD_PATTERN, *back_guard);
+    }
+    
+    return front_ok && back_ok;
+}
+
+void guarded_free(void* ptr) {
+    if (!ptr) return;
+    
+    if (check_guards(ptr)) {
+        printf("[GUARD] 内存边界检查通过\n");
+    } else {
+        printf("[GUARD] 检测到缓冲区溢出!\n");
+    }
+    
+    GuardedBlock* block = (GuardedBlock*)((char*)ptr - sizeof(GuardedBlock));
+    free(block);
+}
+
+void memory_debugging_demo() {
+    printf("=== 内存调试演示 ===\n");
+    
+    // 正常分配和释放
+    void* ptr1 = tracked_malloc(100);
+    void* ptr2 = tracked_malloc(200);
+    
+    tracked_free(ptr1, 100);
+    tracked_free(ptr2, 200);
+    
+    // 模拟内存泄漏
+    void* leak = tracked_malloc(50);
+    // 故意不释放 leak
+    
+    print_memory_stats();
+    
+    // 边界检查演示
+    printf("\n边界检查演示:\n");
+    char* guarded_ptr = (char*)guarded_malloc(10);
+    
+    // 正常使用
+    strcpy(guarded_ptr, "Hello");
+    printf("正常写入: %s\n", guarded_ptr);
+    check_guards(guarded_ptr);
+    
+    // 模拟缓冲区溢出
+    printf("\n模拟缓冲区溢出:\n");
+    strcpy(guarded_ptr, "This is a very long string that will overflow");
+    check_guards(guarded_ptr);
+    
+    guarded_free(guarded_ptr);
+}
+
+// 性能分析工具
+typedef struct {
+    clock_t start_time;
+    clock_t end_time;
+    const char* operation_name;
+} PerformanceTimer;
+
+void timer_start(PerformanceTimer* timer, const char* name) {
+    timer->operation_name = name;
+    timer->start_time = clock();
+}
+
+void timer_end(PerformanceTimer* timer) {
+    timer->end_time = clock();
+    double elapsed = ((double)(timer->end_time - timer->start_time)) / CLOCKS_PER_SEC;
+    printf("[PERF] %s 耗时: %.6f 秒\n", timer->operation_name, elapsed);
+}
+
+// 内存访问模式分析
+void memory_access_patterns() {
+    printf("\n=== 内存访问模式分析 ===\n");
+    
+    const int size = 1000000;
+    int* array = malloc(size * sizeof(int));
+    PerformanceTimer timer;
+    
+    // 顺序访问
+    timer_start(&timer, "顺序访问");
+    for (int i = 0; i < size; i++) {
+        array[i] = i;
+    }
+    timer_end(&timer);
+    
+    // 随机访问
+    timer_start(&timer, "随机访问");
+    srand(time(NULL));
+    for (int i = 0; i < size; i++) {
+        int index = rand() % size;
+        array[index] = i;
+    }
+    timer_end(&timer);
+    
+    // 跨步访问
+    timer_start(&timer, "跨步访问 (步长100)");
+    for (int i = 0; i < size; i += 100) {
+        array[i] = i;
+    }
+    timer_end(&timer);
+    
+    free(array);
+}
+
+// 缓存友好的数据结构
+typedef struct {
+    int* data;
+    size_t size;
+    size_t capacity;
+} DynamicArray;
+
+DynamicArray* dynamic_array_create(size_t initial_capacity) {
+    DynamicArray* arr = malloc(sizeof(DynamicArray));
+    if (!arr) return NULL;
+    
+    arr->data = malloc(initial_capacity * sizeof(int));
+    if (!arr->data) {
+        free(arr);
+        return NULL;
+    }
+    
+    arr->size = 0;
+    arr->capacity = initial_capacity;
+    return arr;
+}
+
+void dynamic_array_push(DynamicArray* arr, int value) {
+    if (!arr) return;
+    
+    if (arr->size >= arr->capacity) {
+        size_t new_capacity = arr->capacity * 2;
+        int* new_data = realloc(arr->data, new_capacity * sizeof(int));
+        if (!new_data) return;
+        
+        arr->data = new_data;
+        arr->capacity = new_capacity;
+        printf("[RESIZE] 数组扩容到 %zu\n", new_capacity);
+    }
+    
+    arr->data[arr->size++] = value;
+}
+
+void dynamic_array_destroy(DynamicArray* arr) {
+    if (arr) {
+        free(arr->data);
+        free(arr);
+    }
+}
+
+void cache_friendly_demo() {
+    printf("\n=== 缓存友好演示 ===\n");
+    
+    DynamicArray* arr = dynamic_array_create(10);
+    PerformanceTimer timer;
+    
+    timer_start(&timer, "动态数组插入1000个元素");
+    for (int i = 0; i < 1000; i++) {
+        dynamic_array_push(arr, i);
+    }
+    timer_end(&timer);
+    
+    printf("最终数组大小: %zu, 容量: %zu\n", arr->size, arr->capacity);
+    
+    dynamic_array_destroy(arr);
+}
+
+int main() {
+    memory_debugging_demo();
+    memory_access_patterns();
+    cache_friendly_demo();
+    return 0;
+}
+```
+
+### 4.2 内存安全最佳实践
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <stdbool.h>
+
+// 安全的字符串处理
+typedef struct {
+    char* data;
+    size_t length;
+    size_t capacity;
+} SafeString;
+
+SafeString* safe_string_create(size_t initial_capacity) {
+    SafeString* str = malloc(sizeof(SafeString));
+    if (!str) return NULL;
+    
+    str->data = malloc(initial_capacity + 1);  // +1 for null terminator
+    if (!str->data) {
+        free(str);
+        return NULL;
+    }
+    
+    str->data[0] = '\0';
+    str->length = 0;
+    str->capacity = initial_capacity;
+    
+    return str;
+}
+
+bool safe_string_append(SafeString* str, const char* text) {
+    if (!str || !text) return false;
+    
+    size_t text_len = strlen(text);
+    size_t required_capacity = str->length + text_len;
+    
+    if (required_capacity >= str->capacity) {
+        size_t new_capacity = (required_capacity + 1) * 2;
+        char* new_data = realloc(str->data, new_capacity + 1);
+        if (!new_data) return false;
+        
+        str->data = new_data;
+        str->capacity = new_capacity;
+    }
+    
+    strcat(str->data, text);
+    str->length += text_len;
+    
+    return true;
+}
+
+void safe_string_destroy(SafeString* str) {
+    if (str) {
+        free(str->data);
+        free(str);
+    }
+}
+
+// 资源管理模式 (RAII-like)
+typedef struct {
+    FILE* file;
+    char* filename;
+    bool is_open;
+} ManagedFile;
+
+ManagedFile* managed_file_open(const char* filename, const char* mode) {
+    ManagedFile* mf = malloc(sizeof(ManagedFile));
+    if (!mf) return NULL;
+    
+    mf->filename = malloc(strlen(filename) + 1);
+    if (!mf->filename) {
+        free(mf);
+        return NULL;
+    }
+    strcpy(mf->filename, filename);
+    
+    mf->file = fopen(filename, mode);
+    mf->is_open = (mf->file != NULL);
+    
+    if (!mf->is_open) {
+        free(mf->filename);
+        free(mf);
+        return NULL;
+    }
+    
+    printf("[FILE] 打开文件: %s\n", filename);
+    return mf;
+}
+
+void managed_file_close(ManagedFile* mf) {
+    if (mf && mf->is_open) {
+        fclose(mf->file);
+        printf("[FILE] 关闭文件: %s\n", mf->filename);
+        mf->is_open = false;
+    }
+}
+
+void managed_file_destroy(ManagedFile* mf) {
+    if (mf) {
+        managed_file_close(mf);
+        free(mf->filename);
+        free(mf);
+    }
+}
+
+// 错误处理模式
+typedef enum {
+    RESULT_OK,
+    RESULT_NULL_POINTER,
+    RESULT_OUT_OF_MEMORY,
+    RESULT_INVALID_ARGUMENT,
+    RESULT_IO_ERROR
+} ResultCode;
+
+typedef struct {
+    ResultCode code;
+    char* message;
+    void* data;
+} Result;
+
+Result result_ok(void* data) {
+    return (Result){RESULT_OK, NULL, data};
+}
+
+Result result_error(ResultCode code, const char* message) {
+    Result result = {code, NULL, NULL};
+    if (message) {
+        result.message = malloc(strlen(message) + 1);
+        if (result.message) {
+            strcpy(result.message, message);
+        }
+    }
+    return result;
+}
+
+void result_destroy(Result* result) {
+    if (result && result->message) {
+        free(result->message);
+        result->message = NULL;
+    }
+}
+
+Result safe_divide(double a, double b) {
+    if (b == 0.0) {
+        return result_error(RESULT_INVALID_ARGUMENT, "除数不能为零");
+    }
+    
+    double* result_value = malloc(sizeof(double));
+    if (!result_value) {
+        return result_error(RESULT_OUT_OF_MEMORY, "内存分配失败");
+    }
+    
+    *result_value = a / b;
+    return result_ok(result_value);
+}
+
+void best_practices_demo() {
+    printf("=== 内存安全最佳实践演示 ===\n");
+    
+    // 安全字符串演示
+    printf("\n1. 安全字符串处理:\n");
+    SafeString* str = safe_string_create(10);
+    
+    safe_string_append(str, "Hello");
+    safe_string_append(str, ", ");
+    safe_string_append(str, "World!");
+    safe_string_append(str, " This is a longer string that will cause reallocation.");
+    
+    printf("最终字符串: %s\n", str->data);
+    printf("长度: %zu, 容量: %zu\n", str->length, str->capacity);
+    
+    safe_string_destroy(str);
+    
+    // 资源管理演示
+    printf("\n2. 资源管理模式:\n");
+    ManagedFile* mf = managed_file_open("test.txt", "w");
+    if (mf) {
+        fprintf(mf->file, "Hello, File!\n");
+        managed_file_destroy(mf);  // 自动关闭文件
+    }
+    
+    // 错误处理演示
+    printf("\n3. 错误处理模式:\n");
+    Result result1 = safe_divide(10.0, 2.0);
+    if (result1.code == RESULT_OK) {
+        printf("10 / 2 = %.2f\n", *(double*)result1.data);
+        free(result1.data);
+    }
+    
+    Result result2 = safe_divide(10.0, 0.0);
+    if (result2.code != RESULT_OK) {
+        printf("错误: %s\n", result2.message);
+        result_destroy(&result2);
+    }
+}
+
+int main() {
+    best_practices_demo();
+    return 0;
+}
+```
+
+## 5. 总结与进阶方向
+
+### 5.1 指针与内存管理核心要点
+
+通过本章的深入学习，我们掌握了C语言指针与内存管理的核心概念：
+
+1. **指针本质**: 指针是存储内存地址的变量，理解内存模型是掌握指针的基础
+2. **指针运算**: 指针算术运算基于所指向数据类型的大小
+3. **数组与指针**: 数组名可以隐式转换为指针，但两者并不完全相同
+4. **动态内存管理**: malloc/calloc/realloc/free的正确使用和常见陷阱
+5. **多级指针**: 构建复杂数据结构的基础
+6. **函数指针**: 实现回调机制和多态性的重要工具
+7. **内存安全**: 防范内存泄漏、缓冲区溢出等常见错误
+
+### 5.2 进阶学习建议
+
+1. **深入学习操作系统**: 理解虚拟内存、页面管理、内存映射等概念
+2. **掌握调试工具**: 熟练使用Valgrind、AddressSanitizer等内存调试工具
+3. **学习数据结构与算法**: 使用指针实现更复杂的数据结构
+4. **并发编程**: 学习多线程环境下的内存管理和同步机制
+5. **系统编程**: 深入学习系统调用、进程间通信等底层编程技术
+
+### 5.3 实践项目建议
+
+1. **实现自己的内存分配器**: 深入理解内存管理原理
+2. **构建复杂数据结构**: 如红黑树、B树、图等
+3. **开发内存调试工具**: 实现内存泄漏检测、边界检查等功能
+4. **编写高性能程序**: 优化内存访问模式，提高缓存命中率
+5. **参与开源项目**: 在实际项目中应用所学知识
+
+掌握指针与内存管理是成为C语言专家的必经之路。通过不断的实践和深入学习，你将能够编写出高效、安全、可维护的C语言程序。
