--- a/data/homepage/c-language/c_005.md
+++ b/data/homepage/c-language/c_005.md
@@ -1,17 +1,6 @@
-# C语言结构体、联合体与枚举：构建复杂数据结构的艺术
+# C语言结构体、联合体与枚举
 
 > 结构体、联合体和枚举是C语言中构建复杂数据结构的基础工具，它们体现了程序设计中数据抽象、内存优化和类型安全的核心理念。本章将从理论基础到实践应用，全面探讨这些复合数据类型的设计哲学、实现机制和最佳实践。
-
-## 学习目标
-
-核心学习目标：
-- 深入理解结构体的设计哲学和内存模型
-- 掌握联合体的内存共享机制和应用场景
-- 学会枚举类型的类型安全设计和最佳实践
-- 理解内存对齐的硬件基础和性能影响
-- 掌握位域的底层实现和应用技巧
-- 学会灵活数组成员的高级用法
-- 设计和实现复杂的数据结构和算法
 
 知识体系架构：
 
@@ -67,7 +56,7 @@
 - 维护性：修改结构体定义影响所有使用点
 - 扩展性：可以通过嵌套和组合构建复杂数据结构
 
-### 1.1.1 结构体的定义和声明：从语法到语义
+#### 结构体的定义和声明：从语法到语义
 
 ```c
 #include <stdio.h>
@@ -205,7 +194,6 @@ void demonstrate_flexible_array() {
         free(arr);
     }
 }
-
 ```
 
 ### 1.2 结构体的内存布局和对齐：硬件与软件的协调
@@ -238,7 +226,7 @@ void demonstrate_flexible_array() {
 - 内存带宽：减少内存访问次数，提高带宽利用率
 - 功耗优化：减少内存访问次数可以降低功耗
 
-### 1.2.1 内存布局优化的系统方法
+#### 内存布局优化的系统方法
 
 ```c
 #include <stdio.h>
@@ -255,8 +243,7 @@ struct BadAlignment {
     char c;      // 1字节，偏移16
     // 填充3字节以对齐int
     int d;       // 4字节，偏移20
-    // 尾部填充4字节以满足结构体8字节对齐
-};  // 总大小：28字节
+};  // 总大小：24字节
 
 struct GoodAlignment {
     double b;    // 8字节，偏移0
@@ -420,7 +407,7 @@ shared_ptr* shared_ptr_copy(shared_ptr *src);
 void shared_ptr_destroy(shared_ptr *ptr);
 ```
 
-### 1.3.1 深拷贝的完整实现与最佳实践
+#### 深拷贝的完整实现与最佳实践
 
 ```c
 #include <stdio.h>
@@ -1194,7 +1181,7 @@ void demonstrate_tagged_union() {
 
 /* 示例入口已删除：保留变体类型用法，避免重复的完整程序示例 */
 ```
-### 2.2 联合体的实际应用场景
+### 2.3 联合体的实际应用场景
 
 ```c
 #include <stdio.h>
@@ -1807,225 +1794,6 @@ void demonstrate_state_machine() {
 - 编译器扩展：某些编译器支持枚举的范围检查
 - 静态分析工具：可以检测枚举使用中的潜在问题
 
-### 3.1 枚举基础和最佳实践
-
-```c
-#include <stdio.h>
-
-// 基本枚举定义
-enum Color {
-    RED,      // 0
-    GREEN,    // 1
-    BLUE      // 2
-};
-
-// 指定枚举值
-enum Status {
-    STATUS_SUCCESS = 0,
-    STATUS_ERROR = -1,
-    STATUS_PENDING = 1,
-    STATUS_TIMEOUT = 2
-};
-
-// 使用枚举作为位标志
-enum FilePermission {
-    PERM_READ = 1,      // 0001
-    PERM_WRITE = 2,     // 0010
-    PERM_EXECUTE = 4,   // 0100
-    PERM_ALL = PERM_READ | PERM_WRITE | PERM_EXECUTE
-};
-
-// 日志级别枚举
-typedef enum {
-    LOG_DEBUG = 0,
-    LOG_INFO,
-    LOG_WARNING,
-    LOG_ERROR,
-    LOG_FATAL,
-    LOG_LEVEL_COUNT  // 用于获取枚举数量
-} LogLevel;
-
-// 枚举到字符串的转换
-const char* log_level_to_string(LogLevel level) {
-    static const char* level_names[] = {
-        "DEBUG", "INFO", "WARNING", "ERROR", "FATAL"
-    };
-    
-    if (level >= 0 && level < LOG_LEVEL_COUNT) {
-        return level_names[level];
-    }
-    return "UNKNOWN";
-}
-
-// 字符串到枚举的转换
-LogLevel string_to_log_level(const char *str) {
-    if (strcmp(str, "DEBUG") == 0) return LOG_DEBUG;
-    if (strcmp(str, "INFO") == 0) return LOG_INFO;
-    if (strcmp(str, "WARNING") == 0) return LOG_WARNING;
-    if (strcmp(str, "ERROR") == 0) return LOG_ERROR;
-    if (strcmp(str, "FATAL") == 0) return LOG_FATAL;
-    return LOG_INFO;  // 默认值
-}
-
-// 日志函数
-void log_message(LogLevel level, const char *message) {
-    printf("[%s] %s\n", log_level_to_string(level), message);
-}
-
-void demonstrate_enums() {
-    printf("=== 枚举类型示例 ===\n");
-    
-    // 基本枚举使用
-    enum Color favorite_color = BLUE;
-    printf("最喜欢的颜色: %d\n", favorite_color);
-    
-    // 状态枚举
-    enum Status result = STATUS_SUCCESS;
-    switch (result) {
-        case STATUS_SUCCESS:
-            printf("操作成功\n");
-            break;
-        case STATUS_ERROR:
-            printf("操作失败\n");
-            break;
-        case STATUS_PENDING:
-            printf("操作进行中\n");
-            break;
-        case STATUS_TIMEOUT:
-            printf("操作超时\n");
-            break;
-        default:
-            printf("未知状态\n");
-    }
-    
-    // 位标志使用
-    int permissions = PERM_READ | PERM_WRITE;
-    printf("权限检查:\n");
-    printf("  可读: %s\n", (permissions & PERM_READ) ? "是" : "否");
-    printf("  可写: %s\n", (permissions & PERM_WRITE) ? "是" : "否");
-    printf("  可执行: %s\n", (permissions & PERM_EXECUTE) ? "是" : "否");
-}
-
-/* 示例入口已删除：保留日志与枚举示例代码，便于按需引用 */
-```
-
-### 3.2 状态机实现
-
-```c
-#include <stdio.h>
-#include <stdbool.h>
-
-// 状态机示例：简单的门控制系统
-typedef enum {
-    STATE_CLOSED,
-    STATE_OPENING,
-    STATE_OPEN,
-    STATE_CLOSING,
-    STATE_ERROR
-} DoorState;
-
-typedef enum {
-    EVENT_OPEN_BUTTON,
-    EVENT_CLOSE_BUTTON,
-    EVENT_SENSOR_CLEAR,
-    EVENT_SENSOR_BLOCKED,
-    EVENT_TIMEOUT,
-    EVENT_ERROR
-} DoorEvent;
-
-typedef struct {
-    DoorState current_state;
-    int timeout_counter;
-    bool sensor_blocked;
-} DoorController;
-
-const char* state_to_string(DoorState state) {
-    switch (state) {
-        case STATE_CLOSED: return "关闭";
-        case STATE_OPENING: return "正在打开";
-        case STATE_OPEN: return "打开";
-        case STATE_CLOSING: return "正在关闭";
-        case STATE_ERROR: return "错误";
-        default: return "未知";
-    }
-}
-
-const char* event_to_string(DoorEvent event) {
-    switch (event) {
-        case EVENT_OPEN_BUTTON: return "开门按钮";
-        case EVENT_CLOSE_BUTTON: return "关门按钮";
-        case EVENT_SENSOR_CLEAR: return "传感器清除";
-        case EVENT_SENSOR_BLOCKED: return "传感器阻挡";
-        case EVENT_TIMEOUT: return "超时";
-        case EVENT_ERROR: return "错误";
-        default: return "未知事件";
-    }
-}
-
-DoorState handle_door_event(DoorController *controller, DoorEvent event) {
-    DoorState old_state = controller->current_state;
-    
-    switch (controller->current_state) {
-        case STATE_CLOSED:
-            if (event == EVENT_OPEN_BUTTON) {
-                controller->current_state = STATE_OPENING;
-                controller->timeout_counter = 0;
-            }
-            break;
-            
-        case STATE_OPENING:
-            switch (event) {
-                case EVENT_SENSOR_CLEAR:
-                    controller->current_state = STATE_OPEN;
-                    break;
-                case EVENT_TIMEOUT:
-                    controller->current_state = STATE_ERROR;
-                    break;
-                case EVENT_SENSOR_BLOCKED:
-                    controller->current_state = STATE_CLOSING;
-                    break;
-            }
-            break;
-            
-        case STATE_OPEN:
-            if (event == EVENT_CLOSE_BUTTON) {
-                controller->current_state = STATE_CLOSING;
-                controller->timeout_counter = 0;
-            }
-            break;
-            
-        case STATE_CLOSING:
-            switch (event) {
-                case EVENT_SENSOR_CLEAR:
-                    controller->current_state = STATE_CLOSED;
-                    break;
-                case EVENT_TIMEOUT:
-                    controller->current_state = STATE_ERROR;
-                    break;
-                case EVENT_SENSOR_BLOCKED:
-                    controller->current_state = STATE_OPENING;
-                    break;
-            }
-            break;
-            
-        case STATE_ERROR:
-            // 错误状态需要人工干预
-            break;
-    }
-    
-    if (old_state != controller->current_state) {
-        printf("状态转换: %s -> %s (事件: %s)\n", 
-               state_to_string(old_state), 
-               state_to_string(controller->current_state),
-               event_to_string(event));
-    }
-    
-    return controller->current_state;
-}
-
-/* 示例入口已删除：保留状态机核心逻辑与事件序列示例 */
-```
-
 ## 4. 位域的应用
 
 位域的设计理念与技术价值
@@ -2169,8 +1937,6 @@ void demonstrate_portability_issues() {
     // 注意：位域的内存布局是实现定义的
     printf("警告：位域的位序和对齐在不同平台可能不同！\n");
 }
-
-/* 示例入口已删除：保留位域示例与可移植性说明 */
 ```
 
 ## 5. 灵活数组成员
@@ -2361,8 +2127,6 @@ void int_array_print(const IntArray *arr) {
     printf("]\n");
     printf("元素数量: %zu, 容量: %zu\n", arr->count, arr->capacity);
 }
-
-/* 示例入口已删除：保留 FAM 的字符串与数组用法片段 */
 ```
 
 ## 6. 实战项目：学生管理系统
