--- a/data/homepage/cpp/cpp_001.md
+++ b/data/homepage/cpp/cpp_001.md
@@ -1,27 +1,4 @@
-# C++语言概述与学习路线：深度理解与实践指南
-
-## 学习目标
-
-通过本章的学习，你将全面了解：
-
-- C++语言的历史发展和设计理念
-- C++的核心特性和编程范式
-- C++在现代软件开发中的地位和作用
-- 系统性的C++学习路线和方法
-- C++的应用领域和职业发展方向
-
-## 目标读者
-
-**本章适合以下读者：**
-- 编程初学者，希望了解C++语言特点
-- 从其他语言转向C++的开发者
-- 希望系统学习C++的技术人员
-- 计算机科学专业的学生
-
-**建议具备的基础：**
-- 基本的计算机操作能力
-- 简单的逻辑思维能力
-- 对编程概念的初步了解（可选）
+# C++语言概述与学习路线
 
 ## C++语言简介
 
