--- a/data/homepage/cpp/cpp_002.md
+++ b/data/homepage/cpp/cpp_002.md
@@ -1,27 +1,4 @@
-# C++开发环境搭建与基础语法：深度理解与实践指南
-
-## 学习目标
-
-通过本章学习，你将理解：
-
-- C++开发环境的基本组成和搭建原理
-- 编译器的工作机制和选择标准
-- C++程序从源码到可执行文件的转换过程
-- C++语言的基础语法规则和设计理念
-- 数据类型系统的核心概念
-
-## 目标读者
-
-**目标读者：**
-- C++编程初学者
-- 希望理解开发环境原理的学习者
-- 从其他编程语言转向C++的开发者
-- 需要搭建C++开发环境的新手
-
-**前置知识：**
-- 基本的计算机操作能力
-- 对编程概念的初步了解
-- 简单的文件和目录操作经验
+# C++开发环境搭建与基础语法
 
 ## 核心概念导览
 
