--- a/data/homepage/cpp/cpp_004.md
+++ b/data/homepage/cpp/cpp_004.md
@@ -1,22 +1,4 @@
-# C++函数、数组与字符串基础概念：深度理解与实践指南
-
-## 学习目标
-
-通过本章学习，你将理解：
-
-- 函数的基本概念和作用原理
-- 参数传递的不同方式及其特点
-- 数组的内存组织和访问原理
-- 字符串的本质和处理方法
-- 递归思想的基本原理
-
-## 目标读者
-
-- **适用读者**：C++初学者，希望理解函数、数组和字符串基本概念的学习者
-
-## 前置知识
-
-- 基本语法、变量概念、简单的控制结构
+# C++函数、数组与字符串基础概念
 
 ## 核心概念导航
 
