--- a/data/homepage/cpp/cpp_005.md
+++ b/data/homepage/cpp/cpp_005.md
@@ -1,30 +1,4 @@
-# C++指针与动态内存管理：深度理解与实践指南
-
-## 学习目标
-
-通过本章学习，你将理解：
-- 指针的本质概念和内存模型
-- 指针与数组的关系原理
-- 动态内存管理的基本思想
-- 现代C++内存安全编程方法
-- 智能指针的设计理念
-
-## 目标读者
-
-本章适合：
-- 已掌握C++基本语法的学习者
-- 希望深入理解内存管理的程序员
-- 准备学习高级C++特性的开发者
-
-## 前置知识
-
-学习本章前，你应该了解：
-- C++基本数据类型和变量
-- 函数的定义和调用
-- 数组的基本概念
-- 引用的基本用法
-
----
+# C++指针与动态内存管理
 
 ## 指针的核心概念
 
