--- a/data/homepage/cpp/cpp_009.md
+++ b/data/homepage/cpp/cpp_009.md
@@ -1,28 +1,4 @@
-# C++异常处理与文件操作：深度理解与实践指南
-
-## 学习目标
-
-通过本文章的学习，你将掌握：
-
-- 异常处理的理论基础和设计哲学
-- 异常传播机制和栈展开原理
-- 异常安全编程的理论体系和实现策略
-- 文件系统抽象和I/O流架构设计
-- 现代C++异常处理和文件操作的最佳实践
-- 错误处理模式和资源管理理论
-
-## 目标读者
-
-本文适合具备C++基础语法知识的学习者，特别是需要深入理解错误处理理论和文件系统操作的开发者。
-
-## 内容概览
-
-1. [异常处理理论基础](#异常处理理论基础)
-2. [异常传播机制与栈展开](#异常传播机制与栈展开)
-3. [异常安全编程理论](#异常安全编程理论)
-4. [文件系统抽象与I/O架构](#文件系统抽象与io架构)
-5. [现代异常处理模式](#现代异常处理模式)
-6. [高级文件操作理论](#高级文件操作理论)
+# C++异常处理与文件操作
 
 ## 异常处理理论基础
 
