--- a/data/homepage/cpp/cpp_010.md
+++ b/data/homepage/cpp/cpp_010.md
@@ -1,36 +1,4 @@
-# C++标准模板库（STL）：深度理解与实践指南
-
-## 学习目标
-
-通过本文的学习，你将理解：
-
-- STL的核心设计理念和组件架构
-- 泛型编程的基本概念和优势
-- 容器、算法、迭代器的协作关系
-- STL在现代C++中的重要地位
-- 如何选择合适的STL组件解决问题
-
-## 目标读者
-
-本文适合已掌握C++基础语法的学习者，希望深入理解STL设计思想和应用原理的开发者。
-
-## 前置知识
-
-- C++基础语法（类、函数、指针）
-- 模板的基本概念
-- 面向对象编程思想
-
-## 内容概览
-
-1. [STL概述与设计哲学](#STL概述与设计哲学)
-2. [泛型编程核心概念](#泛型编程核心概念)
-3. [STL五大组件](#STL五大组件)
-4. [容器体系概念](#容器体系概念)
-5. [算法设计原理](#算法设计原理)
-6. [迭代器抽象机制](#迭代器抽象机制)
-7. [函数对象与策略模式](#函数对象与策略模式)
-8. [现代C++与STL演进](#现代C++与STL演进)
-9. [设计原则与最佳实践](#设计原则与最佳实践)
+# C++标准模板库（STL）
 
 ## STL概述与设计哲学
 
