--- a/data/homepage/cpp/cpp_011.md
+++ b/data/homepage/cpp/cpp_011.md
@@ -1,31 +1,4 @@
-# C++高级特性：移动语义与智能指针：深度理解与实践指南
-
-## 学习目标
-
-通过本章学习，你将掌握：
-- C++值类别系统的基本概念
-- 移动语义的设计思想和实际应用
-- 完美转发的工作原理
-- 智能指针的使用方法和最佳实践
-- RAII原则在资源管理中的应用
-- 现代C++内存管理的核心理念
-
-## 目标读者
-
-本章适合：
-- 已掌握C++基础语法的开发者
-- 希望深入理解现代C++特性的程序员
-- 需要编写高性能C++代码的工程师
-- 准备学习C++11及后续标准的开发者
-
-## 前置知识
-
-- C++基础语法和面向对象编程
-- 指针和引用的基本概念
-- 构造函数和析构函数
-- 模板的基础知识
-
-## 核心内容
+# C++高级特性：移动语义与智能指针
 
 ### 1. C++值类别系统
 
