--- a/data/homepage/cpp/cpp_012.md
+++ b/data/homepage/cpp/cpp_012.md
@@ -1,31 +1,4 @@
-# C++智能指针：shared_ptr与weak_ptr详解：深度理解与实践指南
-
-## 学习目标
-
-通过本章学习，你将掌握：
-- shared_ptr的工作原理和使用方法
-- 引用计数机制的基本概念
-- weak_ptr的作用和应用场景
-- 循环引用问题及其解决方案
-- 智能指针的线程安全特性
-- 性能考虑和最佳实践
-
-## 目标读者
-
-本章适合：
-- 已了解unique_ptr基础的开发者
-- 需要处理共享所有权场景的程序员
-- 希望解决循环引用问题的开发者
-- 关注多线程安全的C++工程师
-
-## 前置知识
-
-- C++基础语法和RAII概念
-- unique_ptr的基本使用
-- 指针和引用的概念
-- 基本的多线程概念
-
-## 核心内容
+# C++智能指针：shared_ptr与weak_ptr详解
 
 ### 1. shared_ptr：共享所有权
 
