--- a/data/homepage/cpp/cpp_013.md
+++ b/data/homepage/cpp/cpp_013.md
@@ -1,31 +1,4 @@
-# C++ Lambda表达式与函数式编程详解：深度理解与实践指南
-
-## 学习目标
-
-通过本章学习，你将掌握：
-- Lambda表达式的语法和使用方法
-- 捕获机制的工作原理和最佳实践
-- 函数式编程的核心概念
-- 高阶函数的设计和应用
-- 现代C++中的函数式编程技巧
-- 性能考虑和优化策略
-
-## 目标读者
-
-本章适合：
-- 熟悉C++基础语法的开发者
-- 希望学习现代C++特性的程序员
-- 对函数式编程感兴趣的开发者
-- 需要编写更简洁、表达力强的代码的工程师
-
-## 前置知识
-
-- C++基础语法和面向对象概念
-- 函数指针和函数对象的基本概念
-- STL容器和算法的基本使用
-- 模板的基础知识
-
-## 核心内容
+# C++ Lambda表达式与函数式编程详解
 
 ### 1. Lambda表达式基础
 
