--- a/data/homepage/cpp/cpp_014.md
+++ b/data/homepage/cpp/cpp_014.md
@@ -1,28 +1,4 @@
-# C++多线程与并发编程：深度理解与实践指南
-
-## 学习目标
-
-通过本指南，你将掌握：
-- 多线程编程的基本概念和原理
-- C++中线程同步的核心机制
-- 内存模型与线程安全的理解
-- 异步编程的基本模式
-- 并发编程的最佳实践和常见陷阱
-
-## 目标读者
-
-- 有C++基础知识的开发者
-- 希望学习多线程编程的初学者
-- 需要理解并发概念的系统开发者
-
-## 前置知识
-
-- C++基本语法和面向对象编程
-- 指针和引用的使用
-- RAII和智能指针的概念
-- 基本的操作系统概念
-
-## 核心概念
+# C++多线程与并发编程
 
 ### 1. 多线程基础
 
