--- a/data/homepage/cpp/cpp_017.md
+++ b/data/homepage/cpp/cpp_017.md
@@ -1,30 +1,4 @@
-# C++软件工程与职业发展：深度理解与实践指南
-
-## 学习目标
-
-通过本指南的学习，你将掌握：
-- 软件工程的核心概念和最佳实践
-- 项目管理的基本原理和方法
-- 软件质量保证的实用技术
-- 团队协作的有效策略
-- 职业发展的规划方法
-- 技术生态系统的理解
-
-## 目标读者
-
-本指南适合：
-- 有一定C++基础的开发者
-- 希望提升软件工程能力的程序员
-- 准备承担技术领导职责的开发者
-- 关注职业发展的技术人员
-
-## 前置知识
-
-- C++编程基础
-- 基本的软件开发经验
-- 对软件开发流程的初步了解
-
-## 核心概念
+# C++软件工程与职业发展
 
 ### 1. 软件工程基础
 
